Add new relic creation